# robotPatrolOfROS

src/amcl/src/: amcl_node.cpp
src/communication/msg/: state.msg
src/communication/src/: fakeP_node.cpp  moveRound_node.cpp  move_new.cpp  move_node.cpp  plc_node.cpp  readme.txt  room_node.cpp  udpClient.cpp  udpServer.cpp  udp_node.cpp  zigbee_node.cpp
src/get_initialpose/: package.xml
src/get_initialpose/src/: record_pose.cpp
src/laser_node/msg/: laser_cur_state.msg
src/laser_node/src/: lms5xx_node.cpp
src/move/: CMakeLists.txt  roomConfig.ini
src/move/src/: inifile.cpp
src/pkg_back/: CMakeLists.txt
src/pkg_back/msg/: MsgScan.msg  state.msg
src/pkg_back/src/: back.cpp  scantest.cpp
src/pkg_odometry/: CMakeLists.txt
src/pkg_pose/: CMakeLists.txt
src/pkg_return/: CMakeLists.txt
src/robot_upstart/: CMakeLists.txt
src/robot_upstart/src/: myrobot.cpp
src/shell/: log.sh  newFile.sh  reboot.sh
src/stateandalarm/: CMakeLists.txt  package.xml
src190424/: robotmake.sh
src190424/communication/: CMakeLists.txt
src190424/get_initialpose/: CMakeLists.txt
src190424/get_initialpose/src/: amcl_initialpose.cpp  amcl_initialpose.cpp~
src190424/laser_node/: CMakeLists.txt
src190424/pkg_avoid_laser/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src190424/pkg_back/: package.xml
src190424/pkg_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src190424/pkg_sensors_tf/: CMakeLists.txt
src190424/pkg_srvs/: CMakeLists.txt  package.xml
src190424/processor/: CMakeLists.txt  package.xml
(+84 files in other folders)
